# human_descent

./: .gitignore  .pre-commit-config.yaml  README.md  cleanup_5s_runs.py  design.md  high_score.md  mnist.py  mnist_human.py  model_data_and_subspace.py  plt_animation.py  pygame_with_layout.py  pyproject.toml  run.sh  server.py  t20.py
.github/workflows/: ci.yml  tests.yml
hudes/: README.md  akai_client.py  client.py  commands  high_scores.py  hud_overlay.py  hudes.proto  hudes_client.py  hudes_pb2.py  hudes_play.py  keyboard_client.py  keyboard_client_openGL.py  mnist.py  model_data_and_subspace.py  opengl_func.py  param_nn.py  plt_layout.py  pygame_plt.py  run  run_param_nn.py  server.py  view.py  websocket_client.py  websocket_server.py  xtouch_client.py
hudes/controllers/: keyboard_client.py  keyboard_client_openGL.py  xtouch_client.py
hudes/model_first/: benchmark_cnn.ipynb  model_first_benchmark.py  model_first_nn.py
hudes/models_and_datasets/: mnist.py
scripts/: mnist_speedrun_pytorch_v7.py
tests/: test_as.py  test_headless_pygame.py  test_highscores_api.py  test_highscores_delete.py  test_hud_overlay.py  test_param_nn.py  test_rank_logic.py  test_speed_run.py  test_web.py
web/: app.js  bundle-visualization.html  highscores.html  highscores.js  index.html  mobile.js  package.json  playwright.config.ts  style.css  vite.config.js
web/client/: ClientState.js  Controls.js  HudesClient.js  KeyboardClient.js  KeyboardClientGL.js  ProtoLoader.js  View.js  helpTour.js  hud.js  hud.mjs  mouseControls.js  mouseControls.mjs  touchControls.js
web/public/: help_screens  hudes.proto  levels.json
web/tests/: global-teardown.mjs  help_overlay.spec.mjs  highscores_insert.spec.mjs  highscores_page.spec.mjs  hud_markup.test.mjs  hud_toggle.spec.mjs  layout_overflow.spec.mjs  leaderboard_ws.spec.mjs  mobile_countdown.spec.mjs  modes.spec.mjs  (+12 more)
(+4 files in other folders)
