[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hudes/"]

[project]
name = "hudes"
version = "0.0.1"
dependencies = [
 "pytest",
 "numpy>=1.25",
 "matplotlib",
 "pyyaml",
 "torch>=2.2",
 "torchvision",
 "websockets",
 "pytest-asyncio",
 "protobuf",
 "pygame",
 "akai-pro-py@git+https://github.com/secretowo/apc-mini-py"
]
requires-python = ">=3.10"
description = "Human descent"
readme = "README.md"
