[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hudes/"]

[project]
name = "hudes"
version = "0.0.1"
dependencies = [
 "pytest",
 "numpy>=1.25",
 "matplotlib==3.9.2",
 "pyyaml",
 "torch>=2.2",
 "torchvision",
 "websockets",
 "pytest-asyncio",
 "protobuf>=5.28",
 "pygame==2.6",
 "PyOpenGL==3.1.7",
 "pytest-timeout"
]
requires-python = ">=3.10"
description = "Human descent"
readme = "README.md"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-ignore = ["F403", "F405"]
exclude = ["hudes/model_first/benchmark_cnn.ipynb"]
